--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -2,9 +2,16 @@
 <html>
 
   <head>
-    <title>Berkshire Site</title>
+    <title>Berkshire Hathaway</title>
   </head>
+<h1>BERKSHIRE HATHAWAY INC. 3555 Farnam Street Suite 1440 Omaha, NE 68131 Official Home Page</h1>
+<hr />
+<ul>
+  <li><a href="#">A Message From Warren E. Buffett</a>
 
+
+
+</ul>
 
 
 
