set up css for challenge

--- a/week-2/berkshire/my-berkshire-site.html
+++ b/week-2/berkshire/my-berkshire-site.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+
+<link type ="text/css" rel="stylesheet" href="phase-0/week-3/stylesheets/my-berkshire-stylesheet.css"/>
+
+
   <meta charset="utf-8">
 
   <title>DBC Berkshire Hathaway Clone</title>
