--- a/week-3/my-berkshire-site.html
+++ b/week-3/my-berkshire-site.html
@@ -21,20 +21,24 @@
 
 <hr />
 
-<ul>
-  <li><a href="#">A Message From Warren E. Buffett</a>
-  <li><a href="#">News Releases</a>"Updated July 1, 2014"
-  <li><a href="#">Annual & Interim Reports</a>"Updated May 2, 2014"
-  <li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a> "Updated March 1, 2014"
-  <li><a href="#">Link to SEC Filings</a>
-  <li><a href="#">Charlie Munger's Letters to Wesco Shareholders</a>
-  <li><a href="#">Corporate Governance</a>
-  <li><a href="#">Annual Meeting Information</a>
-  <li><a href="#">Links to Berkshire Subsidiary Companies</a>
-  <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a>"Updated January 20, 2010"
-  <li><a href="#">Owner's Manual</a>"To view the Owner's Manual you may use Adobe Acrobat Reader software.        Click <a href="#">here</a> to download. Updated March 1, 2014
-  <li><a href="#">Order Berkshire Activewear On-line</a>
-  <li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a>"Updated   August 20, 2012"
+    <div class="links">
+    <ul>
+    <li><a href="#">A Message From Warren E. Buffett</a></li>
+    <li><a href="#">News Releases</a> Updated July 1, 2014
+    <li><a href="#">Annual & Interim Reports</a>Updated May 2, 2014
+    <li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a> Updated March 1, 2014
+    <li><a href="#">Link to SEC Filings</a>
+    <li><a href="#">Charlie Munger's Letters to Wesco Shareholders</a>
+
+    </div>
+
+    <li><a href="#">Corporate Governance</a>
+    <li><a href="#">Annual Meeting Information</a>
+    <li><a href="#">Links to Berkshire Subsidiary Companies</a>
+    <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a> Updated January 20, 2010
+    <li><a href="#">Owner's Manual</a>"To view the Owner's Manual you may use Adobe Acrobat Reader software.        Click <a href="#">here</a> to download. Updated March 1, 2014
+    <li><a href="#">Order Berkshire Activewear On-line</a>
+    <li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a> Updated August 20, 2012
 </ul>
 
 <article>
