--- a/week-3/my-berkshire-site.html
+++ b/week-3/my-berkshire-site.html
@@ -17,16 +17,23 @@
 
 
 <body>
-  <h1>BERKSHIRE HATHAWAY INC. 3555 Farnam Street Suite 1440 Omaha, NE 68131 Official Home Page</h1>
 
-<hr />
+  <h1><span>BERKSHIRE HATHAWAY INC.</span>
+      <span>3555 Farnam Street Suite 1440</span>
+      <span>Omaha, NE 68131</span>
+      <span>Official Home Page</span>
+    <div class="line"></div>
+  </h1>
+
+
 
     <div class="links">
+
     <ul>
-    <li><a href="#">A Message From Warren E. Buffett</a></li>
-    <li><a href="#">News Releases</a> Updated July 1, 2014
-    <li><a href="#">Annual & Interim Reports</a>Updated May 2, 2014
-    <li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a> Updated March 1, 2014
+    <li><a href="#">A Message From Warren E. Buffett</a>
+    <li><a href="#">News Releases</a><div class="small">Updated July 1, 2014</div>
+    <li><a href="#">Annual & Interim Reports</a><div class ="small">Updated May 2, 2014 </div>
+    <li><a href="#">Warren Buffett's Letters to Berkshire Shareholders</a><div class="small"> Updated March 1, 2014 </div>
     <li><a href="#">Link to SEC Filings</a>
     <li><a href="#">Charlie Munger's Letters to Wesco Shareholders</a>
 
@@ -35,20 +42,29 @@
     <li><a href="#">Corporate Governance</a>
     <li><a href="#">Annual Meeting Information</a>
     <li><a href="#">Links to Berkshire Subsidiary Companies</a>
-    <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a> Updated January 20, 2010
-    <li><a href="#">Owner's Manual</a>"To view the Owner's Manual you may use Adobe Acrobat Reader software.        Click <a href="#">here</a> to download. Updated March 1, 2014
+    <li><a href="#">Comparative Rights and Relative Prices of Class A and B Stock</a> <div class="small">Updated January 20, 2010</div>
+    <li><a href="#">Owner's Manual</a><div class="small">To view the Owner's Manual you may use Adobe Acrobat Reader software.        Click <a href="#">here</a> to download. Updated March 1, 2014 </div>
     <li><a href="#">Order Berkshire Activewear On-line</a>
-    <li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a> Updated August 20, 2012
+    <li><a href="#">Letters from Warren E. Buffett Regarding Pledges to Make Gifts of Berkshire Stock</a> <div class="small">Updated August 20, 2012</div>
 </ul>
 
-<article>
-    <p><img src="../imgs/geico.png" alt="Geico Logo"> FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAE YOU SUBSTANTIAL MONEY <a href="#">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
+<br>
+<div class="line"></div>
+
+<class id="article">
+    <p><span><img src="../imgs/geico.png" alt="Geico Logo"></span>
+     <span>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAE YOU SUBSTANTIAL MONEY</span>
+     <span><a href="#">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p></span>
   </article>
-  <hr>
+
+<div class="line"></div>
+
   <article>
     <p>If you have any comments about our WEB page, you can either write us at the address shown above or e-mail us at <a href="#">berkshire@berkshirehathaway.com.</a> However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
   </article>
-  <hr>
+
+ <div class="line"></div>
+<br>
   <footer>
     <a href="#">Legal Disclaimer</a>
     <p>Copyright © 1978-2014Berkshire Hathaway Inc.</p>
