add content changes to blog and stylesheet

--- a/ianwaterski.github.io/blog-index.html
+++ b/ianwaterski.github.io/blog-index.html
@@ -26,7 +26,7 @@
   <h2>Technical Blog Posts</h2>
 
 <a href="http://ianwaterski.github.io/blog/git.html">Blog Post One: Version Control</a></br>
-<a href="#">Blog Post 2</a></br>
+<a href="http://ianwaterski.github.io/blog/css-concepts.html">Blog Post Two: CSS Concepts</a></br>
 <a href="#">Blog Post 3</a></br>
 
 
