--- a/ianwaterski.github.io/blog-template.html
+++ b/ianwaterski.github.io/blog-template.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 
-    <link type ="text/css" rel="stylesheet" href="stylesheets/blog.css"/>
+    <link type ="text/css" rel="stylesheet" href="stylesheets/default.css"/>
 
     <meta charset="utf-8">
 
@@ -18,6 +18,16 @@
 
 
   <body>
+
+    <!-- social media nav -->
+    <div class="topnav">
+      <a href="#">Twitter</a> <a href="https://www.facebook.com/ianwudarski?ref=bookmarks">Facebook</a> <a href="mailto: eeinwud@gmail.com">Email</a> <a href="https://github.com/Ianwaterski">Github </a>
+    </div>
+
+    <p><img src="imgs/dice.jpg" width="200" height ="200" alt="Logo">
+
+
+    <!-- blog post -->
     <h1> Blog Title </h1>
 
     <hr />
@@ -31,34 +41,19 @@
 
 
 
+    <!-- whole footer -->
+    <nav>
+      <a href="http://ianwaterski.github.io/blog-index.html">Blog</a>
+      <a href="http://ianwaterski.github.io/">Portfolio</a>
+      <a href="#">Contact</a></br></br>
+    </nav>
 
-    <a href="#previous blog">Previous</a>  <a href="home">Home</a> <a href="#next blog">Next</a>
+
+    <footer>
+      <p>Legal info in footer will appear here. Questions?: <a href="mailto:eeinwud@gmail.com">Ian Wudarski</a></p>
 
 
 
   </body>
 </html>
 
-<!--
-
-How was it to wireframe and create an HTML page with a pair?
-It was nice to have a living breathing reference working with me.  Whenever I had a question about how to do something of if we should do something it was great t have another set of eyes or perspective right there.
-
-
-Did you find wireframing to be helpful to your development process?
-It was nice to have a reference of what our goal was before diving in to it.  It made trying to structure the HTML a bit easier.
-
-
-
-What did you and your pair decide made a good wireframe?
-We decided that focusing around the text element was the smartest because that was going to be the primary focus of the page.  From that we decided that the next most important item would be to focus on navigation back to the main blog.
-
-
-
-What new semantic elements did you learn about (if any)?
-We tried to keep it simple and didn't include any new semantic elements.
-
-
-http://ianwaterski.github.io/blog-template.html
-
--->
