add css to stylesheet and add reflection to html

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -1,8 +1,11 @@
 <!--
 Write your names here:
-1.
-2.
-We spent [#] hours on this challenge.
+1. Ian Wudarski
+2. Kathryn Garbacz
+We spent [1] hours on this challenge.
+
+Reflection:
+So far I've found that the addage of practice and repetition has been the key to learning HTML/CSS.  It wasn't exceptionally hard at first but learning the specific details can take time.  Positioning specifically in CSS is something that took a bit more time for me to pick up.  This GPS and the DevTools challenge really helped reinforce those topics though.
 -->
 
 <!-- This challenge uses HTML5 syntax that may not be available in all browsers (It works in Chrome and Safari, from my testing. (<details> and<summary>). -->
