add changes to docs

--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -2,7 +2,7 @@
 Write your names here:
 1. Ian Wudarski
 2. Kathryn Garbacz
-We spent [1] hours on this challenge.
+We spent [1] hour on this challenge.
 
 Reflection:
 So far I've found that the addage of practice and repetition has been the key to learning HTML/CSS.  It wasn't exceptionally hard at first but learning the specific details can take time.  Positioning specifically in CSS is something that took a bit more time for me to pick up.  This GPS and the DevTools challenge really helped reinforce those topics though.
